--- a/main.html
+++ b/main.html
@@ -7,6 +7,24 @@
 </head>
 
 <body>
+	<header>
+	<h1 role ="heading">Accessible Portfolio</h1>
+	</header>
+
+	<nav role ="navigation">
+		<ul role ="list">
+			<li role ="listitem"><a href ="#home">Home</a></li>
+			 <li role="listitem"><a href="#about">About</a></li>
+            <li role="listitem"><a href="#contact">Contact</a></li>
+		</ul>
+		
+	</nav>
+	<section>
+		<h2>Image for a portfolio:</h2>
+		<img src ="https://images.unsplash.com/photo-1455849318743-b2233052fcff?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+	</section>
+	
+	
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
