--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 	</nav>
 	<section>
 		<h2>Image for a portfolio:</h2>
-		<img role ="image" src ="https://images.unsplash.com/photo-1455849318743-b2233052fcff?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt ="portfolio">
+		<img role ="img" src ="https://images.unsplash.com/photo-1455849318743-b2233052fcff?q=80&w=2069&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt ="portfolio">
 	</section>
 	
 	
